--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/slider": "^4.5.2",
     "@react-native-picker/picker": "^2.4.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/native-stack": "^6.7.0",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
     "react": "18.0.0",
     "react-native": "0.69.1",
+    "react-native-elements": "^3.4.3",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "3.14.1",
-    "react-native-sound": "^0.11.2"
+    "react-native-sound": "^0.11.2",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
